# Option_Strategy_Pricer

./: .gitattributes  .gitignore  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  conanfile.txt  pyproject.toml  requirements.txt
src/cpp/include/api/: JsonSerializer.h  PricingEndpoint.h  RequestHandler.h  RestServer.h
src/cpp/include/models/: BlackScholes.h  Greeks.h  RiskMeasures.h
src/cpp/include/options/: AmericanOption.h  EuropeanOption.h  Option.h  OptionFactory.h
src/cpp/include/strategy/: BullCall.h  IronCondor.h  Straddle.h  Strangle.h  Strategy.h  StrategyFactory.h
src/cpp/src/: main_server.cpp
src/cpp/src/api/: JsonSerializer.cpp  PricingEndpoint.cpp  RequestHandler.cpp  RestServer.cpp
src/cpp/src/models/: BlackScholes.cpp  Greeks.cpp  RiskMeasures.cpp
src/cpp/src/options/: AmericanOption.cpp  EuropeanOption.cpp  OptionFactory.cpp
src/cpp/src/strategy/: BullCall.cpp  IronCondor.cpp  Strategy.cpp  StrategyFactory.cpp
src/frontend/: .env.example  package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/scripts/: fix-webpack-dev-server.js
src/frontend/src/: App.css  App.js
src/frontend/src/components/: MultiLegStrategy.js
tests/: conftest.py  test_api.py
tests/cpp/: test_blackscholes.cpp  test_greeks.cpp  test_options.cpp  test_strategies.cpp
tests/cpp/fixtures/: test_data.h
