[project]
name = "option-strategy-pricer"
version = "0.1.0"
description = "Full-stack quantitative finance system for option pricing and strategy analysis using Black-Scholes"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "scipy>=1.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "verify_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --timeout=10"
markers = [
    "integration: requires a running pricing server on port 8080",
]

[tool.setuptools]
packages = []
